# amoblin

./: .gitignore  README  README.md  clear.sh  get_dropbox_url.py  install.py  install.sh  matrix.tex  nn.c  sample.sql
blog/: Makefile  MongoDB学习.rst  Rakefile  ant.rst  automake使用.rst  blog.rst  blog.rst.in  c-宏定义.rst  csf学习.rst  ctags使用.rst  gcc编译.rst  gdb使用.rst  head.txt  linux-shell重定向.rst  process.sh  reStructuredTEXT.rst  sample.rst  sed学习.rst  sina.rst  socket学习.rst  todo.td  vim-rst配置.rst  vim-wordpress配置.rst  wp-id不连续的解决.rst  wpc-post.sh  wpc-update.sh  源码分析工具比较.rst
blogpost/: README  blogpost.py
chrome-extension/: autopost.crx
config/: .vimrc  ShortCutList.txt  _bashrc  _gtkrc-2.0  _indent.pro  _minttyrc  _screenrc  _vimrc  gitconfig  inputrc  install  install.sh  linux.sh  mac.sh  mail  mailman  msys_etc_profile  msys_inputrc  sources.list  ubuntu_start.txt
cplus/: plus.cc
latex/: sample.tex  神经网络学习公式.tex
myresume/: csip.aux  csip_it.tex  zsj.odt
notes/: 77rules.mm  HTML.mm  Linux Command.mm  Mac安装多系统.mm  Plone.mm  Python.mm  RPM.mm  Shell.mm  Vim.mm  Zope.mm  apache2.mm  cygwin使用.mm  java_fonts.mm  linux.mm  pysvnmanager学习.mm  修身养性.mm  善用佳软.mm  编译错误.mm
octave/: bp.m  getd.m  (+2 more)
pudding/: CMakeLists.txt  Makefile  Makefile_backup  config.h  convert.c  convert.m  convert.sh  exercise.txt  init_setting.m  learn_c.txt  nn.c  nn.h  nn.sh  paper.rst  pudding.c  pudding.sh  utils.h
pudding/data/: exercise.txt
pudding/doc/: paper.rst
pudding/src/: CMakeLists.txt  config.h  convert.c  matrix.c  matrix.h  nn.c  nn.h  pudding.c  test_log.c  utils.h
(+183 files in other folders)
