cmake_minimum_required (VERSION 2.8)
project (pudding)
add_subdirectory(src bin)
#set (src_list convert.c nn.c pudding.c)
#set (nn nn.c)
#set (convert convert.c)
#set (pudding pudding.c)
message (STATUS "This is binary dir " ${PROJECT_BINARY_DIR})
message (STATUS "This is source dir " ${PROJECT_SOURCE_DIR})
#add_executable (convert convert.c)
#add_executable (nn nn.c)
#add_executable (pudding pudding.c)
